# auraline

./: Cargo.toml  README.md
src/: chunk.rs  cmd.rs  color.rs  commands.rs  git.rs  main.rs  netns.rs  options.rs  presets.rs  prompt.rs  providers.rs  style.rs
src/commands/: init.rs  profile.rs  prompt.rs
src/commands/scripts/: init.bash  init.zsh
src/providers/: basic.rs  duration.rs  exit_code.rs  git.rs  huge_pages.rs  manifest.rs  memory.rs  netif.rs  netns.rs  os.rs  ssh.rs  vcs.rs  virt.rs
src/providers/vcs/: darcs.rs  git.rs  hg.rs  jj.rs  pijul.rs
tests/: manifests_test.rs
