[package]
name = "auraline"
version = "0.5.3"
edition = "2021"

authors = ["Nicola Bonelli <nicola.bonelli@gmail.com>"]
description = "utility that renders information into a string suitable to be embedded in the shell prompt."
license = "MIT"

readme = "README.md"
repository = "https://github.com/awgn/auraline"
keywords = ["cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
phf_macros = "0.13.1"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
if-addrs = "0.14.0"
itertools = "0.13.0"
itoa = "1.0.15"
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = [
    "io-std",
    "macros",
    "mio",
    "process",
    "rt",
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
    "tokio-macros",
] }
owo-colors = "4.2.2"
frunk = "0.4.4"
