[package]
name = "auraline"
version = "0.7.0"
edition = "2021"

authors = ["Nicola Bonelli <nicola.bonelli@gmail.com>"]
description = "utility that renders information into a string suitable to be embedded in the shell prompt."
license = "MIT"

readme = "README.md"
repository = "https://github.com/awgn/auraline"
keywords = ["cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
phf_macros = "0.13.1"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
if-addrs = "0.14.0"
itertools = "0.13.0"
itoa = "1.0.17"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = ["io-std", "macros", "mio", "process", "rt", "fs", "rt-multi-thread", "sync", "time", "tokio-macros", "io-util"] }
owo-colors = "4.3.0"
frunk = "0.4.4"
smol_str = "0.3.5"
libc = "0.2.182"
sysinfo = "0.37.2"
scopeguard = "1.2.0"
enum_dispatch = "0.3.13"
whoami = "1.6.1"
smallvec = { version = "1.15.1", features = ["const_generics"] }
parking_lot = "0.12.5"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
lto              = true
opt-level        = 3
overflow-checks  = false
panic            = 'unwind'
strip            = "debuginfo"
